# greybox-not-greyhat

./: .gitignore  AGENTS.md  BERACHAIN_INPUTS_NEEDED.zh-CN.md  LICENSE  README.md  SECURITY.md  WALKTHROUGH.zh-CN.md  immunefi_report_template.md  inferforge.example.json  inferforge.json  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.zh-CN.md  BERACHAIN_HANDOFF_2026-07-10.zh-CN.md  IMMUNEFI_WEB2_0X_HANDOFF_2026-07-13.zh-CN.md  IMMUNEFI_WEB2_GMX_HANDOFF_2026-07-13.zh-CN.md  IMMUNEFI_WEB2_KILN_HANDOFF_2026-07-13.zh-CN.md  IMMUNEFI_WEB2_SKY_HANDOFF_2026-07-13.zh-CN.md  IMMUNEFI_WEB2_VARIATIONAL_HANDOFF_2026-07-13.zh-CN.md  MIGRATION_V2.zh-CN.md  WORKFLOW.zh-CN.md  burp-codex-mcp.md
infrafi-web/: .dockerignore  .env.template  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  README.md  commitlint.config.cjs  eslint.config.js  mise.toml  next.config.ts  package-lock.json  package.json  server.js  tailwind.config.js
infrafi-web/.husky/: commit-msg
infrafi-web/public/: landing-standalone.html
infrafi-web/scripts/: validate-commit.cjs
profiles/: infrafi-web.json
schemas/: inferforge-config.schema.json
scripts/: check-burp-mcp.sh  inferforge.py  validate.sh  watch-immunefi-webapps.sh
src/inferforge/: __init__.py  analyzer.py  cli.py  config.py  context.py  doctor.py  errors.py  evidence.py  graph.py  inventory.py  lexing.py  models.py  planning.py  (+11 more)
tests/: test_cli_contract.py  test_config.py  test_evidence_freshness.py  test_inventory_routes.py  test_lexing.py  test_sarif.py  test_scan_pipeline.py  test_triage.py  test_workspace.py
(+171 files in other folders)
