[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inferforge-whitebox"
version = "2.0.0"
description = "Source-first Web security review evidence engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ret2basic"}]
keywords = ["application-security", "sast", "whitebox", "web-security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pyright>=1.1.411,<1.2",
  "ruff>=0.15,<0.16",
]

[project.scripts]
inferforge = "inferforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = ["tests/fixtures"]
